java_library(
    name = "testing",
    srcs = glob([
        "src/main/java/io/grpc/testing/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        ":internal",
        "//context",
        "//core",
        "//core:internal",
        "//core:inprocess",
        "//core:util",
        "//stub",

        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_guava_guava//jar",
        "@com_google_truth//jar",
        "@junit//jar",
    ],
)

java_library(
    name = "internal",
    srcs = glob([
        "src/main/java/io/grpc/internal/*.java",
    ]),
    visibility = ["//:__subpackages__"],
    deps = [
        "//core",
        "//core:internal",
        "@com_google_instrumentation_instrumentation_api//jar",
    ],
)
